@@ -10,7 +10,7 @@ DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distribution: //p")
-ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze hardy intrepid jaunty karmic lucid maverick"))
+ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze hardy intrepid jaunty karmic lucid maverick natty"))
 DISTRIBUTION := sid
 endif
 
@@ -35,6 +35,10 @@ ifeq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick sid"))
 	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
 else
 	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=FALSE
+endif
+
+ifneq (,$(findstring $(DISTRIBUTION),"natty"))
+	CMAKE_OPTS += -D QT_QTWEBKIT_INCLUDE_DIR=/usr/include/QtWebKit
 endif
 
 ifneq (,$(findstring $(DISTRIBUTION),"hardy intrepid"))
